--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,17 @@
-# Sync2 TTS Service - Docker Compose for Local Development
-# Use: docker-compose up --build
+# Sync2 TTS Service - Docker Compose
+# Supports both Kokoro and Piper TTS engines
+#
+# Usage:
+#   Kokoro: docker-compose up kokoro-tts -d --build
+#   Piper:  docker-compose up piper-tts -d --build
+#
+# Switch between them:
+#   docker stop sync2-tts-service && docker start sync2-piper-service
+#   docker stop sync2-piper-service && docker start sync2-tts-service
 
 services:
-  tts-service:
+  # Kokoro TTS (existing - slower but more expressive)
+  kokoro-tts:
     build:
       context: .
       dockerfile: Dockerfile
@@ -18,7 +27,6 @@ services:
       - TTS_LOG_LEVEL=INFO
       - TTS_CACHE_ENABLED=true
     volumes:
-      # Mount model cache to persist between restarts
       - tts-models:/app/models
       - tts-cache:/app/cache
     restart: unless-stopped
@@ -29,6 +37,31 @@ services:
       retries: 3
       start_period: 120s
 
+  # Piper TTS (new - faster, lighter)
+  piper-tts:
+    build:
+      context: .
+      dockerfile: Dockerfile.piper
+    container_name: sync2-piper-service
+    ports:
+      - "8765:8765"
+    environment:
+      - TTS_HOST=0.0.0.0
+      - TTS_PORT=8765
+      - PIPER_BINARY=/app/piper/piper
+      - PIPER_MODEL_PATH=/app/models/en_US-amy-medium.onnx
+      - PIPER_CONFIG_PATH=/app/models/en_US-amy-medium.onnx.json
+    volumes:
+      - piper-models:/app/models
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8765/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
 volumes:
   tts-models:
   tts-cache:
+  piper-models:
