--- a/Dockerfile.xtts
+++ b/Dockerfile.xtts
@@ -8,7 +8,8 @@ ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    DEBIAN_FRONTEND=noninteractive
+    DEBIAN_FRONTEND=noninteractive \
+    COQUI_TOS_AGREED=1
 
 # Install system dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
