--- a/Dockerfile.orpheus
+++ b/Dockerfile.orpheus
@@ -1,10 +1,9 @@
-# Sync2 Chatterbox-Turbo TTS Service - GPU Docker Image
-# Sub-200ms latency voice synthesis with CUDA acceleration
+# Sync2 Orpheus TTS Service - GPU Docker Image
+# Human-like voice synthesis with emotional control
 
-FROM nvidia/cuda:12.1.0-cudnn8-runtime-ubuntu22.04
+FROM nvidia/cuda:12.1.0-cudnn8-devel-ubuntu22.04
 
 # Set environment variables
-# HF_TOKEN should be passed at runtime via -e HF_TOKEN=xxx
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PIP_NO_CACHE_DIR=1 \
@@ -17,17 +16,19 @@ ENV PYTHONUNBUFFERED=1 \
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3.11 \
     python3.11-venv \
+    python3.11-dev \
     python3-pip \
     libsndfile1 \
     ffmpeg \
     curl \
     git \
+    build-essential \
     && rm -rf /var/lib/apt/lists/* \
     && ln -sf /usr/bin/python3.11 /usr/bin/python \
     && ln -sf /usr/bin/python3.11 /usr/bin/python3
 
 # Upgrade pip first to avoid resolver issues
-RUN pip install --upgrade pip
+RUN pip install --upgrade pip setuptools wheel
 
 # Create app user (non-root for security)
 RUN useradd -m -u 1000 appuser
@@ -35,11 +36,14 @@ RUN useradd -m -u 1000 appuser
 # Set working directory
 WORKDIR /app
 
-# Copy requirements and install Python dependencies
-COPY requirements.chatterbox.txt ./requirements.txt
+# Copy requirements
+COPY requirements.orpheus.txt ./requirements.txt
 
 # Install PyTorch with CUDA support first
 RUN pip install --no-cache-dir torch torchaudio --index-url https://download.pytorch.org/whl/cu121
+
+# Install vllm (specific version for compatibility)
+RUN pip install --no-cache-dir vllm==0.7.3
 
 # Install other dependencies
 RUN pip install --no-cache-dir -r requirements.txt
@@ -49,8 +53,8 @@ RUN mkdir -p /app/voices /app/cache /app/models /app/models/hub \
     && chmod -R 777 /app/models \
     && chown -R appuser:appuser /app
 
-# Copy Chatterbox server application code
-COPY chatterbox_server/ ./chatterbox_server/
+# Copy Orpheus server application code
+COPY orpheus_server/ ./orpheus_server/
 
 # Set ownership
 RUN chown -R appuser:appuser /app
@@ -58,15 +62,15 @@ RUN chown -R appuser:appuser /app
 # Switch to non-root user
 USER appuser
 
-# Note: Model will be downloaded at first startup since HF_TOKEN is required
-# Pass HF_TOKEN at runtime: docker run -e HF_TOKEN=your_token ...
+# Note: Model will be downloaded at first startup
+# Orpheus uses HuggingFace models: canopylabs/orpheus-tts-0.1-finetune-prod
 
 # Expose port
 EXPOSE 8765
 
 # Health check
-HEALTHCHECK --interval=30s --timeout=30s --start-period=180s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=30s --start-period=300s --retries=3 \
     CMD curl -f http://localhost:8765/health || exit 1
 
 # Run the server
-CMD ["python", "-m", "chatterbox_server.server"]
+CMD ["python", "-m", "orpheus_server.server"]
